--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   animate_do: ^2.0.0
   cached_network_image: ^3.2.0
+  provider: ^6.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
