--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   animate_do: ^2.0.0
   cached_network_image: ^3.2.0
   provider: ^6.0.1
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -44,6 +46,7 @@ dependencies:
   cloud_firestore: ^3.1.3
   firebase_auth: ^3.3.2
   firebase_storage: ^10.2.3
+  google_sign_in: ^5.2.1
 
 
 dev_dependencies:
