--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,16 @@ dependencies:
   provider: ^6.0.1
   flutter_localizations:
     sdk: flutter
-
+  connectivity: ^3.0.6
+  flutter_app_restart: ^1.0.0
+  shared_preferences: ^2.0.11
+  image_picker: ^0.8.4+4
+  flutter_native_image: ^0.0.6+1
+  url_launcher: ^6.0.18
+  flutter_speed_dial: ^5.0.0+1
+  flutter_local_notifications: ^9.2.0
+  timezone: ^0.8.0
+  uuid: ^3.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
