--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,17 @@ dependencies:
   flutter_local_notifications: ^9.2.0
   timezone: ^0.8.0
   uuid: ^3.0.5
+  flutter_colorpicker: ^1.0.3
+  flutter_sound_lite: ^8.5.0
+  permission_handler: ^9.2.0
+  just_audio: ^0.9.20
+  path_provider: ^2.0.9
+  audio_video_progress_bar: ^0.10.0
+  flutter_clean_calendar: ^1.1.0
+  timeline_list: ^0.0.3
+  # flutter_markdown: ^0.6.9
+  # flutter_sound: ^9.1.3
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -56,6 +67,7 @@ dependencies:
   firebase_auth: ^3.3.2
   firebase_storage: ^10.2.3
   google_sign_in: ^5.2.1
+
 
 
 dev_dependencies:
