--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,21 @@ dependencies:
   audio_video_progress_bar: ^0.10.0
   flutter_clean_calendar: ^1.1.0
   timeline_list: ^0.0.3
+  google_fonts: ^2.3.1
+  animated_text_kit: ^4.2.1
+  flutter_barcode_scanner: ^2.0.0
+  google_maps_flutter: ^2.1.2
+  opencv_4: ^1.0.0
+  image_size_getter: ^1.0.0
+  back_button_interceptor: ^5.0.2
+  image: ^3.1.3
+  pdf: ^3.7.3
+  share_plus: ^4.0.3
+  syncfusion_flutter_pdfviewer: ^19.4.56-beta
+  dio: ^4.0.5
+  badges: ^2.0.2
+  # flutter_pdfview: ^1.2.2
+  # edge_detection: ^1.0.9
   # flutter_markdown: ^0.6.9
   # flutter_sound: ^9.1.3
 
